tests/errors/surf_num_09.ki
# log of a negative argument is a math domain error.
var m = import("math")
discard m.log(-1)
